WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117055
Fix double hash lookup in RenderTableSection::paintObject loop
https://bugs.webkit.org/show_bug.cgi?id=117055
Summary
Fix double hash lookup in RenderTableSection::paintObject loop
Rafael Brandao
Reported
2013-05-30 16:01:54 PDT
Fix double hash lookup in RenderTableSection::paintObject loop
Attachments
Patch
(1.56 KB, patch)
2013-05-30 16:02 PDT
,
Rafael Brandao
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Brandao
Comment 1
2013-05-30 16:02:32 PDT
Created
attachment 203389
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-30 17:53:23 PDT
Comment on
attachment 203389
[details]
Patch Clearing flags on attachment: 203389 Committed
r150996
: <
http://trac.webkit.org/changeset/150996
>
WebKit Commit Bot
Comment 3
2013-05-30 17:53:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug