Fix double hash lookup in RenderTableSection::paintObject loop https://bugs.webkit.org/show_bug.cgi?id=117055

Reviewed by Antonio Gomes.

* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::paintObject):


Canonical link: https://commits.webkit.org/135317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150996 268f45cc-cd09-0410-ab3c-d52691b4dbfc